syntax = "proto3";

package user;

service UserService {
  rpc Register (RegisterRequest) returns (UserResponse);
  rpc Login (LoginRequest) returns (UserResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  string message = 1;
}
